descriptive text that emphasizes or further describes significant
changes made.  See document footer for additional details.


----------------------------------------------------------------------
--- 2008-06-XX  Release 7.13.0                                     ---
----------------------------------------------------------------------

* added procedural geometry tools to the Windows port
	- Bob Parker, Andre Castelo
* renamed mged binary command to bo for binary objects - Sean Morrison
* fixed bug that caused remote framebuffers to fail - Sean Morrison
* integrated tgf-g with the default compile/install - Daniel Roßberg
* add w option to tire to allow disabling wheel generation - C. Yapp
* deprecated the mged '-n' option, use '-c' instead - Sean Morrison
* added the ability to invoke mged through icons/menus - Sean Morrison
* new -a option to mged 'killtree' for killing references - Bob Parker
* added new 'killrefs' command to mged - Bob Parker
* tweak tread 2 in tire tool; avoid artifacts on tread wall - C. Yapp
* fixed mged 'dbconcat' hang when not specifying an affix - Bob Parker
* fixed primitive selection solid_illum bug in mged - Bob Parker
* fix bug in tire tool's geometry causing 'nicks' in tread - C. Yapp
* increased raytrace performace of pipe primitive - John Anderson
* fixed bugs handling invalid extrude objects - Sean Morrison
* fixed dependency bug in library pkg-config files - Sean Morrison
* platform installers now use a more consistent naming convention
	- Sean Morrison, Bob Parker
* added -C color option to the mged 'E' command - Bob Parker
* fixed curvature calc bug in ehy primitive - Timothy Van Ruitenbeek
* added new -c character option to the loop command - Dawn Thomas
* tire now checks for files instead of overwriting - Cliff Yapp
* add new nirt formatting options, -L listing option - C. Yapp
* fixed nirt's dest cmd's handling of file name string - Cliff Yapp
* modified mged nirt command to include air in results - Bob Parker